add travis ci file x6 i guess

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
   - "3.8"
 
 env:
-  - pip install pipenv
+  - pip install pipenv~
+  - pipenv install --dev
 
 script:
   - pipenv run python manage.py test
