--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
   - "3.8"
 
 env:
-  - pip install pipenv~
-  - pipenv install --dev
+  - pip install pipenv
+   pipenv install --dev
 
 script:
   - pipenv run python manage.py test
